# goblin.nvim

./: .dockerignore  .gitignore  .gitmodules  .workflows.goblin.json  README.md  custom_graph.mermaid  docker-compose.yml  goblin.py  testing.lua  testing.py
.jukit/: .jukit_info.json
goblin/: .env.example  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  goblin.tmux  main.py  manage.py  package-lock.json  requirements.in  requirements.txt  run_server.py
goblin/apps/desktop/: config.json  error.html  index.html  index.js  package-lock.json  package.json  preload.js  renderer.js  styles.css
goblin/arms/: apps.py  arms.py
goblin/brain/: consumers.py  models.py  routing.py  tasks.py  urls.py  views.py
goblin/brain/agents/: agent.py
goblin/brain/coding/: coding.py
goblin/brain/computeruse/: main
goblin/brain/helpers/: linear_api.py
goblin/brain/jestor/: jestor.py
goblin/brain/lib/: avante.md
goblin/brain/mcp/cf/: README.md  pyproject.toml
goblin/brain/mcp/cf/src/cf/: server.py
goblin/brain/migrations/: 0001_initial.py
goblin/brain/models/: base_model.py
goblin/brain/providers/: anthropic.py  (+5 more)
goblin/ears/: apps.py  consumers.py  ears.py  routing.py  urls.py  views.py  wake.py
goblin/eyes/: apps.py  consumers.py  routing.py
goblin/goblin/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
goblin/mouth/: apps.py  mouth.py  urls.py  views.py
lua/: goblin.lua
lua/goblin/: module.lua
plugin/: goblin.lua
python/: requirements.txt
python/scripts/: graph_state.py  main.py  serve.py  test.py  train.py
(+66 files in other folders)
