[project]
name = "cf"
version = "0.1.0"
description = "the city flavor mcp "
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
 "httpx>=0.27.2",
 "mcp>=1.0.0",
 "python-dotenv>=1.0.1",
]
[[project.authors]]
name = "Weston"
email = "wstewarttennes@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
cf = "cf:main"
